freest/test/prog/Valid/Functional/DoubleUnderscore/DoubleUnderscore.fst
module DoubleUnderscore where

f : Char -> Int -> Bool
f _ _ = True

main : ()
main = print (f 'a' 5)
