freest/test/prog/Invalid/SessionTypes/PartiallyAppliedSend/PartiallyAppliedSend.fst
module PartiallyAppliedSend where

f : Int -> !Int 1-> Skip
f = send
